--- a/fitbook-ios/Base.lproj/Main.storyboard
+++ b/fitbook-ios/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Gh1-gS-V1h">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -9,33 +9,74 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Search-->
+        <scene sceneID="TpU-zc-YoG">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="FitBook" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="bVd-48-RQw" userLabel="Search" customClass="SearchViewController" customModule="FitBook" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
+                        <viewControllerLayoutGuide type="top" id="fzu-us-X29"/>
+                        <viewControllerLayoutGuide type="bottom" id="mSE-lG-oGZ"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                    <view key="view" contentMode="scaleToFill" id="ZMw-K9-DCg">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" systemItem="search" id="uQw-FW-BTL" userLabel="Search"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ol5-AV-aNs" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="24.800000000000001" y="864.91754122938539"/>
+        </scene>
+        <!--Map-->
+        <scene sceneID="Yjc-cq-B15">
+            <objects>
+                <viewController id="jn2-5b-jmn" userLabel="Map" customClass="MapViewController" customModule="FitBook" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="r42-Pa-I1E"/>
+                        <viewControllerLayoutGuide type="bottom" id="AWV-1X-l3w"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="5be-2m-x16">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="lWH-Tn-gg6">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="1Xb-pj-Vb9">
+                                <rect key="frame" x="0.0" y="20" width="375" height="598"/>
                             </mapView>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="lWH-Tn-gg6" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="GAB-ph-t6V"/>
-                            <constraint firstItem="lWH-Tn-gg6" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="hNq-9R-qh5"/>
-                            <constraint firstAttribute="trailing" secondItem="lWH-Tn-gg6" secondAttribute="trailing" id="nDY-Ci-3yv"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="lWH-Tn-gg6" secondAttribute="bottom" id="tYq-SQ-Nty"/>
+                            <constraint firstItem="1Xb-pj-Vb9" firstAttribute="top" secondItem="r42-Pa-I1E" secondAttribute="bottom" id="OZ0-SG-UzL"/>
+                            <constraint firstItem="1Xb-pj-Vb9" firstAttribute="leading" secondItem="5be-2m-x16" secondAttribute="leading" id="TME-WZ-nIN"/>
+                            <constraint firstAttribute="trailing" secondItem="1Xb-pj-Vb9" secondAttribute="trailing" id="ZcJ-TL-Lqo"/>
+                            <constraint firstItem="1Xb-pj-Vb9" firstAttribute="bottom" secondItem="AWV-1X-l3w" secondAttribute="top" id="dA9-dM-XN3"/>
                         </constraints>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Mapa" image="Map" id="Xmq-ZK-f11" userLabel="Map"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1yQ-fD-Qel" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1034" y="36"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="EFc-Ib-2vP">
+            <objects>
+                <tabBarController id="Gh1-gS-V1h" customClass="ViewController" customModule="FitBook" customModuleProvider="target" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="RWi-1L-q3i">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="jn2-5b-jmn" kind="relationship" relationship="viewControllers" id="Udr-bh-4O6"/>
+                        <segue destination="bVd-48-RQw" kind="relationship" relationship="viewControllers" id="9Lo-hc-01g"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xEf-tg-vKv" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
         </scene>
     </scenes>
+    <resources>
+        <image name="Map" width="32" height="32"/>
+    </resources>
 </document>
